--- a/inc/themes/backend/default/assets/css/reset.css
+++ b/inc/themes/backend/default/assets/css/reset.css
@@ -223,7 +223,7 @@
 }
 
 .btn-primary {
-    background-color: #5867dd;
+    background-color: #113098;
     border-color: #5867dd;
     color: #fff;
 }
@@ -241,9 +241,10 @@
 }
 
 .btn-info {
-    background-color: #5578eb;
     border-color: #5578eb;
+    background: #113098;
     color: #fff;
+    border-radius: 20px;
 }
 
 .btn-warning {
