--- a/inc/public/post/assets/css/post.css
+++ b/inc/public/post/assets/css/post.css
@@ -1,4 +1,4 @@
-.post .post-overplay{
+.post .post-overplay {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -9,32 +9,32 @@
     background-color: rgba(255, 255, 255, 0.8);
 }
 
-.post .post-type .item a{
-  
+.post .post-type .item a {
+
     padding: 9px 15px;
     color: #9b9ca1;
     display: block;
 }
 
-.post .post-type .item:first-child a{
+.post .post-type .item:first-child a {
     border-left: none;
 }
 
-.post .post-type .item.active a{
+.post .post-type .item.active a {
     background: #113098;
     color: #fff;
-    border-radius: 20px;
+    border-radius: 30px;
 }
 
-.post .post-content .caption textarea{
+.post .post-content .caption textarea {
     min-height: 100px;
 }
 
-.post .post-content .caption .emojionearea{
+.post .post-content .caption .emojionearea {
     border-radius: 4px 4px 0 0;
 }
 
-.post .post-content .caption .caption-toolbar{
+.post .post-content .caption .caption-toolbar {
     border-left: 1px solid #f4f4f4;
     border-right: 1px solid #f4f4f4;
     border-bottom: 1px solid #f4f4f4;
@@ -43,13 +43,14 @@
     height: 30px;
 }
 
-.post .post-content .caption .caption-toolbar .item{
+.post .post-content .caption .caption-toolbar .item {
     height: 30px;
     line-height: 30px;
     padding: 0 10px;
     display: inline-block;
     float: left;
 }
+
 .ai .caption .caption-toolbar {
     border-left: 1px solid #f4f4f4;
     border-right: 1px solid #f4f4f4;
@@ -58,6 +59,7 @@
     border-radius: 0 0 4px 4px;
     height: 30px;
 }
+
 .ai .caption .caption-toolbar .item {
     height: 30px;
     line-height: 30px;
@@ -66,81 +68,82 @@
     border-right: 1px solid #f1f1f1;
     float: left;
 }
-.post .post-content .caption .caption-toolbar a.item{
+
+.post .post-content .caption .caption-toolbar a.item {
     color: #74788d;
 }
 
-.post .post-content .caption .caption-toolbar a.item:hover{
+.post .post-content .caption .caption-toolbar a.item:hover {
     background-color: #5d78ff;
     color: #fff;
 }
 
-.post .post-content .caption .caption-help .count-word{
+.post .post-content .caption .caption-help .count-word {
     height: 30px;
     line-height: 30px;
     padding: 0 15px;
 }
 
-.post .post-schedule .post-schedule-content{
+.post .post-schedule .post-schedule-content {
     display: none;
 }
 
-.post .post-schedule.active .post-schedule-content{
+.post .post-schedule.active .post-schedule-content {
     display: block;
 }
 
-.post .post-content .widget-location .loading{
+.post .post-content .widget-location .loading {
     display: none;
 }
 
-.post .post-content .widget-location .card-body{
+.post .post-content .widget-location .card-body {
     max-height: 250px;
     overflow: hidden;
 }
 
-.post .post-preview .tab{
+.post .post-preview .tab {
     text-align: center;
     margin-bottom: 0;
     padding-top: 6px;
     display: block;
-    border-bottom: 1px solid #f4f4f4;
+    border-bottom: none !important;
 }
 
-.post .post-preview .tab a{
+.post .post-preview .tab a {
     display: inline-block;
     font-size: 24px;
     width: 43px;
     height: 43px;
 }
 
-.post .post-preview .tab a.active{
-     border-bottom: 2px solid #ffb822;
+.post .post-preview .tab a.active {
+    border-bottom: 2px solid #ffb822;
 }
 
-.post-modal .modal-body p{
+.post-modal .modal-body p {
     font-weight: 500;
 }
 
-.post-modal .modal-body ul{
+.post-modal .modal-body ul {
     margin-bottom: 0;
     list-style: circle;
     padding-left: 15px;
     color: #fd397a;
 }
 
-.post .input-group .input-group-text{
+.post .input-group .input-group-text {
     border: 1px solid #f4f4f4;
 }
 
-.post .form-control{
+.post .form-control {
     border: 1px solid #f4f4f4;
 }
 
-.post .post-advance .nav-tabs{
+.post .post-advance .nav-tabs {
     border-bottom: none !important;
 }
 
-.post .post-advance .advance-content{
+.post .post-advance .advance-content {
     display: none;
     padding: 15px 15px 0 15px;
     border-left: 1px solid #f4f4f4;
@@ -150,19 +153,19 @@
     border-radius: 0 0 4px 4px;
 }
 
-.post .post-advance .nav-tabs .nav-link .arrow{
-    -webkit-transition: all .5s,opacity .5s,-webkit-transform .5s;
-    -o-transition: all .5s,opacity .5s,-o-transform .5s;
-    transition: all .5s,opacity .5s,transform .5s;
+.post .post-advance .nav-tabs .nav-link .arrow {
+    -webkit-transition: all .5s, opacity .5s, -webkit-transform .5s;
+    -o-transition: all .5s, opacity .5s, -o-transform .5s;
+    transition: all .5s, opacity .5s, transform .5s;
     display: inline-block;
 }
 
-.post .post-advance.active .nav-tabs .nav-link.active{
+.post .post-advance.active .nav-tabs .nav-link.active {
     border-color: #f4f4f4 #f4f4f4 #f4f4f4;
     border-radius: 4px 4px 0 0;
 }
 
-.post .post-advance.active .nav-tabs .nav-link .arrow{
+.post .post-advance.active .nav-tabs .nav-link .arrow {
     -webkit-transform: rotate(-180deg);
     -moz-transform: rotate(-180deg);
     -o-transform: rotate(-180deg);
@@ -170,25 +173,25 @@
     transform: rotate(-180deg);
 }
 
-.post .post-advance .nav-tabs .nav-link.active{
+.post .post-advance .nav-tabs .nav-link.active {
     border-color: #f4f4f4 #f4f4f4 #f4f4f4;
     border-radius: 4px;
 }
 
-.post .post-advance.active .advance-content{
+.post .post-advance.active .advance-content {
     display: block;
 }
 
 @media (max-width: 768px) {
-    .post .post-type .item a i{
+    .post .post-type .item a i {
         display: block;
     }
 
 
 }
 
-@media (max-width: 1366px){
-    .post .post-preview .tab-content{
+@media (max-width: 1366px) {
+    .post .post-preview .tab-content {
         flex: 0 0 90%;
         max-width: 90%;
         margin: auto;
