--- a/inc/system/file_manager/assets/css/file_manager.css
+++ b/inc/system/file_manager/assets/css/file_manager.css
@@ -17,7 +17,23 @@
 .file-manager .fm-storage{
 
 }
+.input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
 
+.search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
 .file-manager .fm-storage .fm-storage-size{
 
 }
