using class and toggle now

--- a/inc/system/file_manager/assets/css/file_manager.css
+++ b/inc/system/file_manager/assets/css/file_manager.css
@@ -17,8 +17,12 @@
 .file-manager .fm-storage{
 
 }
-
-
+.is-active .result {
+    display: block;
+}
+.result {
+    display: none;
+}
 .search-container button {
   float: right;
   padding: 6px 10px;
