--- a/inc/system/file_manager/assets/css/file_manager.css
+++ b/inc/system/file_manager/assets/css/file_manager.css
@@ -17,12 +17,13 @@
 .file-manager .fm-storage{
 
 }
-.is-active .result {
-    display: block;
-}
 .result {
     display: none;
 }
+.is-active .result {
+    display: block !important;
+}
+
 .search-container button {
   float: right;
   padding: 6px 10px;
