--- a/inc/public/post/assets/css/post.css
+++ b/inc/public/post/assets/css/post.css
@@ -9,10 +9,22 @@
     background-color: rgba(255, 255, 255, 0.8);
 }
 
+#posttype {
+
+    background: #f4f4f4;
+    border-radius: 20px;
+}
+
+body#full-dark #posttype {
+    background: #323a5f;
+    border-radius: 20px;
+
+}
+
 .post .post-type .item a {
 
     padding: 9px 15px;
-    color: #9b9ca1;
+    color: #323a5f;
     display: block;
 }
 
@@ -25,10 +37,12 @@
     color: #fff;
     border-radius: 30px;
 }
-.hide{
+
+.hide {
 
     display: none;
 }
+
 .post .post-content .caption textarea {
     min-height: 100px;
 }
