--- a/inc/themes/backend/default/assets/css/reset.css
+++ b/inc/themes/backend/default/assets/css/reset.css
@@ -18987,7 +18987,7 @@
   background-color: transparent;
   border: 1px solid transparent;
   -webkit-box-shadow: none;
-  box-shadow: none !important;
+  box-shadow: none ;
   -webkit-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
