--- a/inc/themes/backend/default/assets/css/style.css
+++ b/inc/themes/backend/default/assets/css/style.css
@@ -1074,6 +1074,18 @@ body#sidebar-dark .mCS-minimal.mCSB_scrollTools_vertical .mCSB_dragger {
     line-height: 40px;
 }
 
+.button {
+
+    -webkit-box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.19);
+    box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.19);
+}
+
+.card {
+    border-radius: 20px;
+    -webkit-box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.19);
+    box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.19);
+}
+
 .widget-list .widget-item .icon img {
     width: 100%;
     height: 100%;
